Fix blurry background triangle on some computers

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(to bottom right, transparent 49.9%, #eee 50%);
+    background: linear-gradient(to bottom right, transparent 50%, #eee 50%);
     z-index: 50;
 }
 
